Fix dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -345,6 +345,12 @@ td {
 		background-color: rgb(55, 55, 55);
 	}
 
+	h1,
+	h2 {
+		border-bottom-color: rgba(250, 250, 250, 0.6);
+		color: rgba(255, 255, 255, 0.88);
+	}
+
 	p,
 	.ds-text,
 	ul {
